js/src/tests/test262/built-ins/Error/prototype/stack/getter-cross-realm.js



















var getA = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

var realmB = $262.createRealm().global;

assert.notSameValue(
  Error.prototype,
  realmB.Error.prototype,
  'precondition: the two realms have distinct Error.prototype objects'
);




var errB = new realmB.Error('msg');
assert.sameValue(typeof getA.call(errB), 'string', 'cross-realm Error instance returns a string');



var plainB = new realmB.Object();
assert.sameValue(getA.call(plainB), undefined, 'cross-realm plain object returns undefined');



assert.sameValue(getA.call(realmB.Error.prototype), undefined, 'cross-realm Error.prototype returns undefined');


var getB = Object.getOwnPropertyDescriptor(realmB.Error.prototype, 'stack').get;
assert.sameValue(typeof getB, 'function', 'realm B has its own getter');
assert.notSameValue(getA, getB, 'the two realms have distinct getter functions');

var errA = new Error('msg');
assert.sameValue(typeof getB.call(errA), 'string', 'realm B getter on realm A Error instance returns a string');

reportCompare(0, 0);
